--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_unflags =
-    -std=gnu++98
-    -std=gnu++11
-    -std=c++11
-build_flags =
-    -std=c++17
 platform_packages =
     platformio/toolchain-atmelavr@^3.70300.220127
+lib_deps=
+    garmin/LIDAR-Lite@^3.0.6
+    Wire
