Add dependencies and configure peripherals

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,11 @@ framework = arduino
 platform_packages =
     platformio/toolchain-atmelavr@^3.70300.220127
 lib_deps=
+    adafruit/Adafruit BNO055@^1.6.1
+    adafruit/Adafruit Unified Sensor@^1.1.9
+    adafruit/Adafruit BusIO@^1.14.1
     garmin/LIDAR-Lite@^3.0.6
-    Wire
+    sparkfun/SparkFun TB6612FNG Motor Driver Library@^1.0.0
     Servo
+    SPI
+    Wire
