--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,9 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_speed = 115200
+build_flags =
+    -D MONITOR_SPEED=${env:megaatmega2560.monitor_speed}
 platform_packages =
     platformio/toolchain-atmelavr@^3.70300.220127
 lib_deps=
@@ -21,4 +24,3 @@ lib_deps=
     Servo
     SPI
     Wire
-monitor_speed = 115200
