Add -fpermissive to build unflags

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_speed = 115200
+build_unflags =
+    -fpermissive
 build_flags =
     -D MONITOR_SPEED=${env:megaatmega2560.monitor_speed}
 platform_packages =
